--- a/bucks2bar/index.html
+++ b/bucks2bar/index.html
@@ -37,10 +37,18 @@
         </ul>
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="data" role="tabpanel" aria-labelledby="data-tab">
-                <p>Placeholder for Data content</p>
+
             </div>
             <div class="tab-pane fade" id="chart" role="tabpanel" aria-labelledby="chart-tab">
                 <p>Placeholder for Chart content</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+            <h2 class="text-center">January</h2>
+            </div>
+            <div class="col-12 col-md-6">
+            <h2 class="text-center">February</h2>
             </div>
         </div>
     </div>
