Add income and expenses input fields for January and February

--- a/bucks2bar/index.html
+++ b/bucks2bar/index.html
@@ -43,12 +43,33 @@
                 <p>Placeholder for Chart content</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-md-6">
-            <h2 class="text-center">January</h2>
-            </div>
-            <div class="col-12 col-md-6">
-            <h2 class="text-center">February</h2>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <h2 class="text-center">January</h2>
+                    <div class="row">
+                        <div class="col-6">
+                            <label for="january-income" class="form-label">Income</label>
+                            <input type="text" class="form-control" id="january-income" placeholder="Enter income">
+                        </div>
+                        <div class="col-6">
+                            <label for="january-expenses" class="form-label">Expenses</label>
+                            <input type="text" class="form-control" id="january-expenses" placeholder="Enter expenses">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <h2 class="text-center">February</h2>
+                    <div class="row">
+                        <div class="col-6">
+                            <label for="february-income" class="form-label">Income</label>
+                            <input type="text" class="form-control" id="february-income" placeholder="Enter income">
+                        </div>
+                        <div class="col-6">
+                            <label for="february-expenses" class="form-label">Expenses</label>
+                            <input type="text" class="form-control" id="february-expenses" placeholder="Enter expenses">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
