Refactor income and expenses input fields for January and February to use input groups for better accessibility and styling

--- a/bucks2bar/index.html
+++ b/bucks2bar/index.html
@@ -48,12 +48,16 @@
                     <h2 class="text-center">January</h2>
                     <div class="row">
                         <div class="col-6">
-                            <label for="january-income" class="form-label">Income</label>
-                            <input type="text" class="form-control" id="january-income" placeholder="Enter income">
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="january-income-label">Income</span>
+                                <input type="text" class="form-control" id="january-income" placeholder="Enter income" aria-label="January Income" aria-describedby="january-income-label">
+                            </div>
                         </div>
                         <div class="col-6">
-                            <label for="january-expenses" class="form-label">Expenses</label>
-                            <input type="text" class="form-control" id="january-expenses" placeholder="Enter expenses">
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="january-expenses-label">Expenses</span>
+                                <input type="text" class="form-control" id="january-expenses" placeholder="Enter expenses" aria-label="January Expenses" aria-describedby="january-expenses-label">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -61,12 +65,16 @@
                     <h2 class="text-center">February</h2>
                     <div class="row">
                         <div class="col-6">
-                            <label for="february-income" class="form-label">Income</label>
-                            <input type="text" class="form-control" id="february-income" placeholder="Enter income">
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="february-income-label">Income</span>
+                                <input type="text" class="form-control" id="february-income" placeholder="Enter income" aria-label="February Income" aria-describedby="february-income-label">
+                            </div>
                         </div>
                         <div class="col-6">
-                            <label for="february-expenses" class="form-label">Expenses</label>
-                            <input type="text" class="form-control" id="february-expenses" placeholder="Enter expenses">
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="february-expenses-label">Expenses</span>
+                                <input type="text" class="form-control" id="february-expenses" placeholder="Enter expenses" aria-label="February Expenses" aria-describedby="february-expenses-label">
+                            </div>
                         </div>
                     </div>
                 </div>
