--- a/bucks2bar/index.html
+++ b/bucks2bar/index.html
@@ -246,11 +246,12 @@
             </div>
         </div>
         <div class="tab-pane fade" id="chart" role="tabpanel" aria-labelledby="chart-tab">
-            <p>Placeholder for Chart content</p>
+            <canvas id="myChart" width="400" height="200"></canvas>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
