--- a/bucks2bar/index.html
+++ b/bucks2bar/index.html
@@ -248,6 +248,8 @@
         <div class="tab-pane fade" id="chart" role="tabpanel" aria-labelledby="chart-tab">
             <canvas id="myChart" width="400" height="200"></canvas>
         </div>
+        <!-- A Plain Boostrap button with the label "Download" -->
+        <button class="btn btn-primary" id="download">Download</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
